docs-archive/apache-airflow-providers-ftp/2.0.1/_sources/_api/airflow/providers/ftp/sensors/ftp/index.rst.txt
:py:mod:`airflow.providers.ftp.sensors.ftp`
===========================================

.. py:module:: airflow.providers.ftp.sensors.ftp


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.ftp.sensors.ftp.FTPSensor
   airflow.providers.ftp.sensors.ftp.FTPSSensor




.. py:class:: FTPSensor(*, path: str, ftp_conn_id: str = 'ftp_default', fail_on_transient_errors: bool = True, **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Waits for a file or directory to be present on FTP.

   :param path: Remote file or directory path
   :type path: str
   :param fail_on_transient_errors: Fail on all errors,
       including 4xx transient errors. Default True.
   :type fail_on_transient_errors: bool
   :param ftp_conn_id: The :ref:`ftp connection id <howto/connection:ftp>`
       reference to run the sensor against.
   :type ftp_conn_id: str

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['path']

      Errors that are transient in nature, and where action can be retried


   .. py:attribute:: transient_errors
      :annotation: = [421, 425, 426, 434, 450, 451, 452]

      

   .. py:attribute:: error_code_pattern
      

      

   .. py:method:: poke(self, context: airflow.utils.context.Context) -> bool

      Function that the sensors defined while deriving this class should
      override.



.. py:class:: FTPSSensor(*, path: str, ftp_conn_id: str = 'ftp_default', fail_on_transient_errors: bool = True, **kwargs)

   Bases: :py:obj:`FTPSensor`

   Waits for a file or directory to be present on FTP over SSL.


